--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 
     <build>
 
-        <finalName>reredis</finalName>
+        <finalName>distil</finalName>
         <plugins>
 
             <plugin>
@@ -86,14 +86,23 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- The Compiler Plugin is used to compile the sources of your project  https://maven.apache.org/plugins/maven-compiler-plugin/ -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>6</source>
-                    <target>6</target>
+                    <source>${java.source.version}</source>
+                    <target>${java.target.version}</target>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>default-compile</id>
+                    </execution>
+                </executions>
             </plugin>
+
         </plugins>
     </build>
 </project>
