--- a/lua/conf.d/default.conf
+++ b/lua/conf.d/default.conf
@@ -12,9 +12,11 @@ server {
 
     keepalive_requests 10000;
 
-    #access_log off;
+    access_log off;
 
     location / {
+        # Set this to the folder that contains interstitial.html
+        set $template_path '/usr/local/openresty/site/lualib/distil';
         access_by_lua_block {
             local distil = require "distil";
             distil.access()
@@ -22,6 +24,28 @@ server {
         proxy_pass http://origin;
         proxy_http_version 1.1;
         proxy_set_header Connection "";
+    }
+
+    # The path through which the challenge will be served. This is the path that
+    # you include using a script tag on your pages:
+    # <script type="text/javascript" src="/6657193977244c13"></script>
+    location /6657193977244c13 {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        access_by_lua_block {
+            local distil = require "distil";
+            distil.mask_headers()
+        }
+        proxy_pass http://bonproxy/v6/challenge/debug-id$request_uri;
+    }
+
+    # The path through which the SDK challenge will be served. This is the path
+    # that you configure in your App when initializing the mobile SDK.
+    location /rSa9Vzy3KajA9f9m/v1/challenge {
+        proxy_set_header Host $host;
+        proxy_set_header X-D-Domain $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_pass http://bonproxy/v6/challenge/debug-id$request_uri;
     }
 
     location /healthcheck {
